# simple-ogl-demo

./: README.md  fbo.cpp  main.cpp  meson.build  objs.cpp
include/: fbo.h  objs.h
include/glad/: egl.h  gl.h  glad.h  gles1.h  gles2.h  glx.h  vulkan.h
lib/: glad.c  gles1.c
shaders/: obj.frag  obj.vert  quad.frag
